--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "firebase": "^4.8.0",
     "vue": "^2.5.2",
+    "vue-carousel": "^0.7.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
