--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^4.8.0",
     "vue": "^2.5.2",
     "vue-carousel": "^0.7.3",
+    "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.0"
   },
