--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "cyrillic-to-translit-js": "^2.1.0",
     "firebase": "^4.8.0",
+    "lodash": "^4.17.10",
     "vue": "^2.5.2",
     "vue-carousel": "^0.7.3",
     "vue-moment": "^3.2.0",
     "vue-router": "^3.0.1",
-    "vue-wysiwyg": "^1.7.0"
+    "vue-wysiwyg": "^1.7.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -29,7 +31,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
